# sturdy-waffle

./: .gitignore  CMakeLists.txt  SDLPodstawa.exe.cbp  main.cpp
Gra/: Game.cpp  Game.h  InputManager.cpp  InputManager.h  TextureManager.cpp  TextureManager.h
Gra/Aktorzy/: Actor.cpp  Actor.h  IPhisicsable.cpp  IPhisicsable.h  IPhysicsable.cpp  IPhysicsable.h  IRenderable.cpp  IRenderable.h  ITickable.cpp  ITickable.h
Gra/Aktorzy/Collisions/: AABB.cpp  AABB.h  CollisionManager.cpp  CollisionManager.h  SweepData.cpp  SweepData.h
Gra/Aktorzy/Enemy/: Asteroid.cpp  Asteroid.h  Boss.cpp  Boss.h  Charger.cpp  Charger.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  Shooter.cpp  Shooter.h  Sniper.cpp  Sniper.h  Strafer.cpp  Strafer.h
Gra/Aktorzy/Mapa/: GameMap.cpp  GameMap.h  MapTile.cpp  MapTile.h  background.cpp  background.h
Gra/Aktorzy/Player/: Player.cpp  Player.h
Gra/Aktorzy/Projectiles/: PlayerProjectile.cpp  PlayerProjectile.h  Projectile.cpp  Projectile.h  Projectile1.cpp  Projectile1.h  Projectile2.cpp  Projectile2.h
Gra/Aktorzy/TestCollider/: EnemyKillingBox.cpp  EnemyKillingBox.h  TestCollider.cpp  TestCollider.h
Gra/Matma/: Vector2.cpp  Vector2.h
Gra/Tekstury/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
LuaBridge/: LuaBridge.h
